pass'd the progress function because Tester has no self.step attribute

--- a/config/libri_rnnlm960.yaml
+++ b/config/libri_rnnlm960.yaml
@@ -16,15 +16,16 @@ solver:
   n_jobs: 4                                   # Subprocess used for torch Dataloader
   max_label_len: 400                          # Max length for output sequence (0 for no restriction)
   # Training options
-  train_set: ['train-clean-100','train-clean-360','train-other-500']              #
+  train_set: ['train-clean-100']              #
   batch_size: 32                              # training batch size
-  apex: True                                  # Use APEX (see https://github.com/NVIDIA/apex for more details)
-  total_steps: 3000000                         # total steps for training                         
+  apex: False                                  # Use APEX (see https://github.com/NVIDIA/apex for more details)
+  total_steps: 50000                         # total steps for training                         
   # Validation options
   dev_set: ['dev-clean']                      
   dev_batch_size: 32                             
   dev_step: 1000
   dev_metric: 'dev_loss'
+  decode_beam_size: 10
   # Misc
   max_timestep: 0
   test_set: []
